Fixed extra whitespace on bottom of page and font/padding sizes for small phones

--- a/assets/css/blog-post.css
+++ b/assets/css/blog-post.css
@@ -14,7 +14,7 @@
 
 .blog-post-section,
 .author-details {
-  padding: 0 45px;
+  padding: 0 30px;
 }
 #main-content,
 .blog-author-section,
