--- a/assets/css/card-styles.css
+++ b/assets/css/card-styles.css
@@ -42,25 +42,3 @@
     gap: 30px;
   }
 }
-
-@media (min-width: 1440px) {
-  #card-container {
-    padding: 30px;
-  }
-  .card {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: space-evenly;
-    gap: 15px;
-  }
-  .card-img {
-    flex: 1;
-  }
-
-  .card-content {
-    flex: 1;
-    align-items: flex-start;
-  }
-}
