--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,15 +18,13 @@ h3 {
 }
 
 .container {
-  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px 1fr 75px;
+  grid-template-columns: 100%;
+  grid-template-rows: 100px 1fr;
   gap: 15px;
   grid-template-areas:
     "hd"
-    "mn"
-    "ft";
+    "mn";
 }
 
 #nav {
@@ -37,7 +35,7 @@ h3 {
   gap: 15px;
   width: 100%;
   color: #f2f2f2;
-  background-color: black;
+  background-color: #070707;
 }
 
 .logo {
@@ -70,18 +68,36 @@ h3 {
   justify-content: center;
   width: 100%;
   padding: 30px;
-  background-color: black;
+  background-color: #070707;
   color: #f2f2f2;
+}
+
+@media (max-width: 430px) {
+  #nav {
+    gap: 1px;
+  }
+
+  .nav-links {
+    gap: 7.5px;
+  }
+
+  #header {
+    padding: 15px;
+  }
+
+  h1,
+  h2,
+  h3 {
+    font-size: 1em;
+  }
 }
 
 @media (min-width: 900px) {
   .container {
     grid-template-columns: 25vw 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 100%;
     gap: 15px;
-    grid-template-areas:
-      "hd" "mn"
-      "ft" "ft";
+    grid-template-areas: "hd mn";
   }
 
   #nav,
